2011-04-28  Sancho Lerena <slerena@artica.es>

	* include/functions_calendar.php: Minimal style changes on code

	* operation/projects/csvexport.php: This is used to "print" report
	on proyect (list of tasks), to be improved in the future.

	* operation/projects/project_tree.php: ACL fixed.

	* operation/side_menu.php: Added csvexport.

	* godmode/setup/logviewer.php: Fixed a typo.

2011-04-27  Sancho Lerena <slerena@artica.es>

	* graphs/functions_gd.php: Temporary fix for fontname, is missing ¿?.
	Fontsize is not passwd to progressbar function!. Fixed.

	* functions_config.php: fontpath config token is taken from "font". 
	This is used in graph libraries, which are the same in pandora.

    * godmode/setup/setup_visual.php: Fixed load of PDFFont.

    * integria.spec: Missing php-gzip for PDF library.

    * operation/kb/browse_data.php: Added PDF Link to KD article.

    * operation/side_menu.php: Project and task are now collapsible boxes.

    * include/mpdf51/config_fonts.php,
    * include/mpdf51/mpdf.php: Now uses font defined in config and uses integria
    font path instead mPDF default paths.


2011-04-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_pchart.php
	include/graphs/functions_fsgraph.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php
	include/fonts/unicode.ttf
	include/fonts/code.ttf
	include/functions_incidents.php
	godmode/setup/setup_visual.php: Merged fonts pass
	from miguel works in pandora and passed font and
	font size to all graph types

2011-04-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_incidents.php
	operation/incidents/incident.php
	operation/incidents/incident_statistics.php
	operation/incidents/incident_search.php: Moved 
	incident statistics from search screen to new 
	statistics tab

2011-04-25  Sergio Martin <sergio.martin@artica.es>

	* images/arrow_down_red.png
	images/arrow_down_green.png
	images/arrow_up_red.png